--- a/playground/templates/hello.html
+++ b/playground/templates/hello.html
@@ -4,6 +4,8 @@
     <h1>Hello {{ name }}</h1>
     {% else %}
     <h1>Hello World</h1>
-    {% endif %}
+    {% endif %} {{ result }}
+     
   </body>
 </html>
+-
